# just-content-platform

./: .gitignore  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.js
aggregator/: admin.py  apps.py  mock_views.py  models.py  services.py  signals.py  tasks.py  urls.py  utils.py  views.py
aggregator/migrations/: 0001_initial.py  0002_initial.py  0002_pluginprovider_allowed_domains_and_more.py  0003_remove_pluginprovider_can_restore_assets.py  0004_pluginprovider_allow_title_creation_and_more.py  0005_pluginprovider_app_label_pluginprovider_is_local_and_more.py  0006_alter_externalcontentregistry_options_and_more.py
aggregator/providers/: base.py
aggregator/services/: __init__.py  lock_manager.py  manifest_fetcher.py  payload_processor.py  plugin_manager.py  session_manager.py  telemetry_processor.py
aggregator/views/: __init__.py  session.py  telemetry.py  webhook.py
content/: admin.py  apps.py  lookups.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
content/models/: __init__.py  (+6 more)
core/: celery.py  middleware.py  redis_client.py  settings.py  urls.py
kodik_plugin/: admin.py  apps.py  models.py  provider.py  tasks.py
media/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
recommendations/: apps.py  tasks.py  urls.py  views.py
taxonomy/: admin.py  admin_views.py  models.py  serializers.py  services.py  tasks.py  taxonomy_presets.json  urls.py  views.py
templates/: base.html
users/: forms.py  models.py  serializers.py  signals.py  urls.py  views.py
(+128 files in other folders)
