[tool.poetry]
name = "just-content-platform"
version = "0.1.0"
description = ""
authors = ["Dmitriy <dimnissv@yandex.kz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.4"
psycopg = {extras = ["binary"], version = "^3.3.3"}
celery = "^5.6.3"
redis = "^7.4.0"
django-environ = "^0.13.0"
pillow = "^12.2.0"
djangorestframework = "^3.17.1"
django-vite = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
