[tool.poetry]
name = "just-content-platform"
version = "0.1.0"
description = ""
authors = ["Dmitriy <dimnissv@yandex.kz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.4"
psycopg = {extras = ["binary"], version = "^3.3.3"}
celery = "^5.6.3"
redis = "^7.4.0"
django-environ = "^0.13.0"
pillow = "^12.2.0"
djangorestframework = "^3.17.1"
django-vite = "^3.1.0"
gunicorn = "^25.3.0"
unicorn = "^2.1.4"
uvicorn = "^0.44.0"
django-cors-headers = "^4.9.0"
eventlet = "^0.41.0"
requests = "^2.33.1"
psycopg2-binary = "^2.9.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
